--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ ul {
 }
 
 .main {
+  position: relative;
   border-bottom: 1px solid #ECECEC;
 }
 
@@ -124,6 +125,51 @@ ul {
 
 .page-header__accent {
   color: #212121;
+}
+
+.page-header__menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 796px;
+  text-align: center;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+.page-header__menu.is-open {
+  display: block;
+}
+
+.page-header__button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  background-position: center;
+}
+
+.button .button__cross {
+  display: none;
+}
+
+.button.is-open .button__cross {
+  display: block;
+}
+
+.button.is-open .button__menu {
+  display: none;
+}
+
+.page-header__icon {
+  width: 19px;
+  height: 19px;
 }
 
 .page-header__logo {
@@ -715,15 +761,12 @@ ul {
 }
 
 .section--examples {
-  display: none;
+  padding-top: 0;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .section--examples {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    padding-top: 0;
+    display: none;
   }
 }
 
@@ -949,42 +992,34 @@ ul {
 @media screen and (max-width: 767px) {
   .clients {
     width: 480px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .clients {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     margin: -15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: -15px;
   }
 }
@@ -999,6 +1034,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   .clients__item {
+    width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
   .clients__item:nth-last-child(-n+2) {
@@ -1009,14 +1045,17 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients__item {
-    width: calc((100% / 3 * 15px) / 3);
+    width: calc((100% - 6 * 15px) / 3);
     margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
+  .clients__item {
+    margin-left: 30px;
+  }
   .clients__item:first-child {
     margin-left: 0;
   }
@@ -1032,7 +1071,6 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
   height: 92px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
@@ -1043,6 +1081,24 @@ ul {
 .clients__link:hover, .clients__link:focus {
   fill: #2196F3;
   border-color: #2196F3;
+}
+
+@media screen and (max-width: 767px) {
+  .clients__link {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 
 .clients__icon {
