--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -9,24 +9,20 @@
 
     @media screen and (max-width: 767px) {
         width: 480px;
+        margin: -15px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         margin: -15px;
     }
-
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        margin: -15px;
-        }
         
 }
 
@@ -41,6 +37,7 @@
     //     }
 
     @media screen and (max-width: 767px) {
+        width: calc((100% - 4 * 15px) / 2);
         margin: 15px;
 
         &:nth-last-child(-n+2) {
@@ -50,15 +47,15 @@
         &:nth-child(-n+2) {
             margin-top: 0;
         }
+    }
 
-        }
-
-    @media screen and (min-width: 768px) {
-        width: calc((100% / 3 * 15px) / 3);
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: calc((100% - 6 * 15px) / 3);
         margin: 15px;
         }
 
     @media screen and (min-width: 1200px) {
+        margin-left: 30px;
 
         &:first-child {
             margin-left: 0;
@@ -70,7 +67,6 @@
 .clients__link {
     @include centeredFlex (flex);
     
-    width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
@@ -82,6 +78,18 @@
     &:hover, &:focus {
             fill: #2196F3;
             border-color: $accent-color;
+        }
+
+    @media screen and (max-width: 767px) {
+        width: 210px;
+        }
+
+    @media screen and (min-width: 768px) {
+        width: 226px;
+        }
+
+    @media screen and (min-width: 1200px) {
+        width: 170px;
         }
 }
 
