--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -1,25 +1,14 @@
 .section--examples {
+    padding-top: 0;
 
-    display: none;
-
-    // @media screen and (min-width: 480px) {
-    //         display: none;
-    //     }
-
-    // @media screen and (min-width: 768px) {
-    //         display: none;
-    //     }
-
-    @media screen and (min-width: 1200px) {
-         display: flex;
-         padding-top: 0;
+    @media screen and (max-width: 1199px) {
+            display: none;
         }
-}
+} 
 
 .examples {
     display: flex;
 }
-
 .examples__item {
     margin-left: 30px;
 
