--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,4 +1,6 @@
 .main {
+    position: relative;
+
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -9,4 +11,52 @@
 
 .page-header__accent {
     color: $title-text-color;
+}
+.page-header__menu {
+    display: none;
+
+    position: absolute;
+
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+    text-align: center;
+    background-color: $primary-bgc-color;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 
+    0px 2px 4px rgba(0, 0, 0, 0.08), 
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+
+    &.is-open {
+        display: block;
+    }
+}
+.page-header__button {
+    // width: 40px;
+    // height: 40px;
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    background-position: center;
+}
+
+.button {
+    & .button__cross {
+        display: none;
+    }
+
+    &.is-open .button__cross {
+        display: block;
+    }
+
+    &.is-open .button__menu {
+        display: none;
+    }
+}
+
+.page-header__icon {
+width: 19px;
+height: 19px;
 }
