--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,22 +1,19 @@
-.section--features {
-
-}
-
 .features {
     display: block;
-        @media screen and (max-width: 767px) {
+
+        @include mobile {
             width: 480px;
         }
     
-        @media screen and (min-width: 768px) {
+        @include tablet {
             display: flex;
             flex-wrap: wrap;
+            gap: 30px;
             width: 768px;
         }
     
-        @media screen and (min-width: 1200px) {
+        @include desktop {
             width: 1200px;
-            display: flex;
         }
 
 }
@@ -40,12 +37,13 @@
     }
 
     @media screen and (min-width: 768px) {
-        width: 354px;
-        margin: 15px;
+        width: calc((100% - 30px) / 2);
+        // width: 354px;
+        // margin: 15px;
 
-        &:nth-last-child(-n+2) {
-                margin-bottom: 0;
-            }
+        // &:nth-last-child(-n+2) {
+        //         margin-bottom: 0;
+        //     }
     }
 
     @media screen and (min-width: 1200px) {
