--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,9 +2,9 @@
     position: relative;
     border-bottom: 1px solid #ECECEC; 
 
-    @media screen and (max-width:767px) {
-        min-width: 480px;
-    }
+    // @media screen and (max-width:767px) {
+    //     min-width: 480px;
+    // }
     
 }
 
@@ -17,7 +17,7 @@
             height: 80px;
         }
 
-    @media screen and (min-width:1200px) {
+    @include desktop {
         width: 1200px;
         height: 80px;
     }
