--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,17 +1,10 @@
 .section {
     display: flex;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
-    @media screen and (max-width: 767px) {
-        padding-top: 60px;
-        padding-bottom: 60px;
-        }
-
-    @media screen and (min-width: 768px) {
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
     
-    @media screen and (min-width: 1200px) {
+    @include desktop {
         padding-top: 94px;
         padding-bottom: 94px;
     }
@@ -24,10 +17,11 @@
 
     font-weight: 700;
     font-size: 28px;
-    line-height: 1.17;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
     text-align: center;
         
-    @media screen and (min-width: 1200px) {
+    @include desktop {
         margin-bottom: 50px;
         
         font-size: 36px;
