--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -21,21 +21,22 @@ body {
 }
 
 .container {
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (max-width: 767px) {
-        width: 480px;
-        }
-
-    @media screen and (min-width: 768px) {
-        max-width: 768px;
+    @include mobile {
+        width: 450px;
     }
 
-    @media screen and (min-width: 1200px) {
-        max-width: 1200px;
+    @include tablet {
+        width: 768px;
+    }
+
+    @include desktop {
+        width: 1200px;
         }
 }
 
@@ -45,4 +46,11 @@ ul {
     padding: 0;
     margin: 0;
     list-style: none;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
 }
