--- a/css/main.css
+++ b/css/main.css
@@ -154,11 +154,11 @@ img {
   .page-header__menu {
     display: none;
     position: absolute;
-    padding: 8px 40px 48px 40px;
+    padding: 48px 40px;
     top: 100%;
     left: 0;
     width: 100%;
-    height: 796px;
+    height: 100vh;
     background-color: #FFFFFF;
     -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -1370,19 +1370,8 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
   color: #ffffff;
-}
-
-@media screen and (max-width: 767px) {
-  .social__title {
-    text-align: center;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .social__title {
-    text-align: center;
-  }
 }
 
 @media screen and (min-width: 1200px) {
