--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -35,12 +35,12 @@
         display: none; 
         position: absolute;
 
-        padding: 8px 40px 48px 40px;
+        padding: 48px 40px;
         
         top: 100%;
         left: 0;
         width: 100%;
-        height: 796px;
+        height: 100vh;
         background-color: $primary-bgc-color;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04),
                 0px 2px 4px rgba(0, 0, 0, 0.08),
@@ -62,8 +62,6 @@
     }
 }
 .page-header__button {
-    width: 40px;
-    height: 40px;
     display: inline-flex;
     margin: 0;
     margin-left: auto;
